force-app/main/default/objects/Appointment__c/fields/Account_NumberAC_Units__c.field-meta.xml
<CustomField>
    <fullName>Account_NumberAC_Units__c</fullName>
    <formula>Text(Person_Account__r.Number_of_AC_Units__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of AC Units</label>
    <type>Text</type>
</CustomField>