force-app/main/default/objects/Appointment__c/fields/Account_YearHome_Built__c.field-meta.xml
<CustomField>
    <fullName>Account_YearHome_Built__c</fullName>
    <formula>Person_Account__r.Year_Built__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>What year was your home built</label>
    <type>Text</type>
</CustomField>