force-app/main/default/objects/Appointment__c/fields/Add_Remove_Walls_Drywall__c.field-meta.xml
<CustomField>
    <fullName>Add_Remove_Walls_Drywall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add/Remove Walls/Drywall</label>
    <type>Checkbox</type>
</CustomField>