force-app/main/default/objects/Appointment__c/fields/Addition_s_Type_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Addition_s_Type_of_Project__c</fullName>
    <label>Addition(s) Type of Project</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Design and Build</fullName>
            </value>
            <value>
                <fullName>Build (use existing architectural drawing(s))</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>