force-app/main/default/objects/Appointment__c/fields/Age_of_Current_AC_System__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Current_AC_System__c</fullName>
    <label>Age of Current AC System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 10 Years</fullName>
            </value>
            <value>
                <fullName>10-15 Years</fullName>
            </value>
            <value>
                <fullName>15+ Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>