force-app/main/default/objects/Appointment__c/fields/Already_have_a_system__c.field-meta.xml
<CustomField>
    <fullName>Already_have_a_system__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Already have a system</label>
    <type>Checkbox</type>
</CustomField>