force-app/main/default/objects/Appointment__c/fields/Appointment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Notes__c</fullName>
    <label>Appointment Notes</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>