force-app/main/default/objects/Appointment__c/fields/Appointment_Setter__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Setter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment Setter</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Appointment</relationshipLabel>
    <relationshipName>Appointment</relationshipName>
    <type>Lookup</type>
</CustomField>