force-app/main/default/objects/Appointment__c/fields/Approx_Sq_Ft_Text__c.field-meta.xml
<CustomField>
    <fullName>Approx_Sq_Ft_Text__c</fullName>
    <label>Approx. Sq. Ft</label>
    <length>255</length>
    <type>Text</type>
</CustomField>