force-app/main/default/objects/Appointment__c/fields/Appt_Date__c.field-meta.xml
<CustomField>
    <fullName>Appt_Date__c</fullName>
    <formula>DATEVALUE(Appointment_Start_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appt Date</label>
    <type>Date</type>
</CustomField>