force-app/main/default/objects/Appointment__c/fields/Are_you_Interested_in_Financing__c.field-meta.xml
<CustomField>
    <fullName>Are_you_Interested_in_Financing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you Interested in Financing?</label>
    <type>Checkbox</type>
</CustomField>