force-app/main/default/objects/Appointment__c/fields/Area_of_Concrete__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Concrete__c</fullName>
    <label>Area of Concrete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100-200 sq ft</fullName>
            </value>
            <value>
                <fullName>200-300 sq ft</fullName>
            </value>
            <value>
                <fullName>300-400 sq ft</fullName>
            </value>
            <value>
                <fullName>400+ sq ft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>