force-app/main/default/objects/Appointment__c/fields/Area_of_Concrete_Surface__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Concrete_Surface__c</fullName>
    <label>Area of Concrete Surface</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garage Floor</fullName>
            </value>
            <value>
                <fullName>Patio</fullName>
            </value>
            <value>
                <fullName>Basement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>