force-app/main/default/objects/Appointment__c/fields/Area_to_be_coated__c.field-meta.xml
<CustomField>
    <fullName>Area_to_be_coated__c</fullName>
    <label>Area to be coated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 400 sq ft</fullName>
            </value>
            <value>
                <fullName>400-800 sq ft</fullName>
            </value>
            <value>
                <fullName>800+ Sq ft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>