force-app/main/default/objects/Appointment__c/fields/assigned__c.field-meta.xml
<CustomField>
    <fullName>assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>assigned</label>
    <type>Checkbox</type>
</CustomField>