force-app/main/default/objects/Appointment__c/fields/Avg_Electric_Bill__c.field-meta.xml
<CustomField>
    <fullName>Avg_Electric_Bill__c</fullName>
    <label>Avg Electric Bill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>