force-app/main/default/objects/Appointment__c/fields/Avg_Monthly_Spend_on_Bottled_Water__c.field-meta.xml
<CustomField>
    <fullName>Avg_Monthly_Spend_on_Bottled_Water__c</fullName>
    <label>Avg Monthly Spend on Bottled Water</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>