force-app/main/default/objects/Appointment__c/fields/Avg_Temperature_AC_Kept_at__c.field-meta.xml
<CustomField>
    <fullName>Avg_Temperature_AC_Kept_at__c</fullName>
    <label>Avg Temperature AC Kept at</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>