force-app/main/default/objects/Appointment__c/fields/Backyard_gate_locked__c.field-meta.xml
<CustomField>
    <fullName>Backyard_gate_locked__c</fullName>
    <label>Backyard gate locked</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>