force-app/main/default/objects/Appointment__c/fields/Bath_Floorplan__c.field-meta.xml
<CustomField>
    <fullName>Bath_Floorplan__c</fullName>
    <label>Floorplan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maintain Existing Floorplan</fullName>
            </value>
            <value>
                <fullName>Changes to Existing Floorplan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>