force-app/main/default/objects/Appointment__c/fields/Bath_Update_Replace_Sinks__c.field-meta.xml
<CustomField>
    <fullName>Bath_Update_Replace_Sinks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update/Replace Sinks</label>
    <type>Checkbox</type>
</CustomField>