force-app/main/default/objects/Appointment__c/fields/Bench_seat__c.field-meta.xml
<CustomField>
    <fullName>Bench_seat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bench Seat</label>
    <type>Checkbox</type>
</CustomField>