force-app/main/default/objects/Appointment__c/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unbilled</fullName>
                <default>true</default>
                <label>Unbilled</label>
            </value>
            <value>
                <fullName>Billed</fullName>
            </value>
            <value>
                <fullName>No Charge</fullName>
            </value>
            <value>
                <fullName>Appointment Rejected No Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>