force-app/main/default/objects/Appointment__c/fields/Cabinets__c.field-meta.xml
<CustomField>
    <fullName>Cabinets__c</fullName>
    <label>Cabinets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Cabinets</fullName>
            </value>
            <value>
                <fullName>Reface Old Cabinets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>