force-app/main/default/objects/Appointment__c/fields/Call_Center_Agent__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Agent__c</fullName>
    <label>Call Center Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>