force-app/main/default/objects/Appointment__c/fields/Channel_Source__c.field-meta.xml
<CustomField>
    <fullName>Channel_Source__c</fullName>
    <defaultValue>&apos;Other&apos;</defaultValue>
    <label>Channel Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Canvas</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>