force-app/main/default/objects/Appointment__c/fields/Chemical_Type__c.field-meta.xml
<CustomField>
    <fullName>Chemical_Type__c</fullName>
    <label>Chemical Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chlorine</fullName>
            </value>
            <value>
                <fullName>Salt</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>