force-app/main/default/objects/Appointment__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>Person_Account__r.City__c</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>