force-app/main/default/objects/Appointment__c/fields/Concrete_Finished_with_Overlay_Coating__c.field-meta.xml
<CustomField>
    <fullName>Concrete_Finished_with_Overlay_Coating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concrete Finished with Overlay/Coating</label>
    <type>Checkbox</type>
</CustomField>