force-app/main/default/objects/Appointment__c/fields/Concrete_Steps_Installed__c.field-meta.xml
<CustomField>
    <fullName>Concrete_Steps_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concrete Steps Installed</label>
    <type>Checkbox</type>
</CustomField>