force-app/main/default/objects/Appointment__c/fields/Cross_Streets__c.field-meta.xml
<CustomField>
    <fullName>Cross_Streets__c</fullName>
    <label>Cross Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>