force-app/main/default/objects/Appointment__c/fields/Description_of_closet__c.field-meta.xml
<CustomField>
    <fullName>Description_of_closet__c</fullName>
    <label>Description of closet(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Walk in Closet</fullName>
            </value>
            <value>
                <fullName>Media Closet</fullName>
            </value>
            <value>
                <fullName>Reach in Closet</fullName>
            </value>
            <value>
                <fullName>Home office</fullName>
            </value>
            <value>
                <fullName>Laundry Room</fullName>
            </value>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>Kitchen Pantry</fullName>
            </value>
            <value>
                <fullName>Family Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>