force-app/main/default/objects/Appointment__c/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <label>Design</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Need design suggestions</fullName>
            </value>
            <value>
                <fullName>Have professional drawings already</fullName>
            </value>
            <value>
                <fullName>Have a basic idea of what I want</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>