force-app/main/default/objects/Appointment__c/fields/Do_you_already_have_a_provider__c.field-meta.xml
<CustomField>
    <fullName>Do_you_already_have_a_provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you already have a provider?</label>
    <type>Checkbox</type>
</CustomField>