force-app/main/default/objects/Appointment__c/fields/Do_you_have_a_Doorbell_Camera__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_Doorbell_Camera__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you have a Doorbell Camera</label>
    <type>Checkbox</type>
</CustomField>