force-app/main/default/objects/Appointment__c/fields/Do_you_have_a_water_filtration_system__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_water_filtration_system__c</fullName>
    <label>Do you have a water filtration system?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Reverse Osmosis only</fullName>
            </value>
            <value>
                <fullName>Yes, but it does not work</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>