force-app/main/default/objects/Appointment__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <formula>Person_Account__r.fEmail__c</formula>
    <label>Email Address</label>
    <type>Text</type>
</CustomField>