force-app/main/default/objects/Appointment__c/fields/Epoxy_Flooring__c.field-meta.xml
<CustomField>
    <fullName>Epoxy_Flooring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Epoxy Flooring</label>
    <type>Checkbox</type>
</CustomField>