force-app/main/default/objects/Appointment__c/fields/Existing_Coating__c.field-meta.xml
<CustomField>
    <fullName>Existing_Coating__c</fullName>
    <label>Existing Coating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>