force-app/main/default/objects/Appointment__c/fields/Existing_Issue_with_current_door__c.field-meta.xml
<CustomField>
    <fullName>Existing_Issue_with_current_door__c</fullName>
    <label>Existing Issue(s) with current door</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged sections</fullName>
            </value>
            <value>
                <fullName>Broken springs (door will not go up/down)</fullName>
            </value>
            <value>
                <fullName>Worn out hardware (side hinges)</fullName>
            </value>
            <value>
                <fullName>Rollers out of tracks</fullName>
            </value>
            <value>
                <fullName>Cable off the drums</fullName>
            </value>
            <value>
                <fullName>Door won’t open</fullName>
            </value>
            <value>
                <fullName>Door won’t close</fullName>
            </value>
            <value>
                <fullName>Broken door parts</fullName>
            </value>
            <value>
                <fullName>Gaps around door when closed (bottom, side, or top)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>