force-app/main/default/objects/Appointment__c/fields/Flooring_Type__c.field-meta.xml
<CustomField>
    <fullName>Flooring_Type__c</fullName>
    <label>Flooring Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tile</fullName>
            </value>
            <value>
                <fullName>Carpet</fullName>
            </value>
            <value>
                <fullName>Laminate</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
            <value>
                <fullName>Vinyl</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>