force-app/main/default/objects/Appointment__c/fields/Frequency_Desired__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Desired__c</fullName>
    <label>Frequency Desired</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>