force-app/main/default/objects/Appointment__c/fields/Have_you_purchased_material__c.field-meta.xml
<CustomField>
    <fullName>Have_you_purchased_material__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have you purchased material?</label>
    <type>Checkbox</type>
</CustomField>