force-app/main/default/objects/Appointment__c/fields/House_Sq_Footage__c.field-meta.xml
<CustomField>
    <fullName>House_Sq_Footage__c</fullName>
    <label>House Sq. Footage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>