force-app/main/default/objects/Appointment__c/fields/Included_in_Landscape_Project__c.field-meta.xml
<CustomField>
    <fullName>Included_in_Landscape_Project__c</fullName>
    <label>Included in Landscape Project</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sprinkler System</fullName>
            </value>
            <value>
                <fullName>Grass</fullName>
            </value>
            <value>
                <fullName>Trees/Shrubs</fullName>
            </value>
            <value>
                <fullName>Drainage System</fullName>
            </value>
            <value>
                <fullName>Wood Structure(s), Deck(s), Gazebo(s), etc</fullName>
            </value>
            <value>
                <fullName>Concrete Patio/Walkway, etc</fullName>
            </value>
            <value>
                <fullName>Masonry/Brick/Stone work</fullName>
            </value>
            <value>
                <fullName>Fencing</fullName>
            </value>
            <value>
                <fullName>Retaining wall</fullName>
            </value>
            <value>
                <fullName>Landscape lighting</fullName>
            </value>
            <value>
                <fullName>Pool/Spa</fullName>
            </value>
            <value>
                <fullName>Storage Shed</fullName>
            </value>
            <value>
                <fullName>Built in BBQ</fullName>
            </value>
            <value>
                <fullName>Pergola</fullName>
            </value>
            <value>
                <fullName>Firepit: Gas</fullName>
            </value>
            <value>
                <fullName>Firepit: Electric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>