force-app/main/default/objects/Appointment__c/fields/Lead_Review__c.field-meta.xml
<CustomField>
    <fullName>Lead_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Review</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Appointment (Lead Review)</relationshipLabel>
    <relationshipName>Appointment1</relationshipName>
    <type>Lookup</type>
</CustomField>