force-app/main/default/objects/Appointment__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Sales Rabbit</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>WebSite</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Self Gen</fullName>
            </value>
            <value>
                <fullName>Gravel Call Center</fullName>
            </value>
            <value>
                <fullName>Networx</fullName>
            </value>
            <value>
                <fullName>Thumbtack</fullName>
            </value>
            <value>
                <fullName>Google PPC</fullName>
            </value>
            <value>
                <fullName>Yelp</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Canvas</fullName>
            </value>
            <value>
                <fullName>Salesforce Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>