force-app/main/default/objects/Appointment__c/fields/Leak_Damage__c.field-meta.xml
<CustomField>
    <fullName>Leak_Damage__c</fullName>
    <label>Leak/Damage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>