force-app/main/default/objects/Appointment__c/fields/Main_Area_of_Concern__c.field-meta.xml
<CustomField>
    <fullName>Main_Area_of_Concern__c</fullName>
    <label>Main Area of Concern</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>