force-app/main/default/objects/Appointment__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <formula>Person_Account__r.PersonContact.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>