force-app/main/default/objects/Appointment__c/fields/Move_Install_New_Toilet__c.field-meta.xml
<CustomField>
    <fullName>Move_Install_New_Toilet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Move/Install New Toilet</label>
    <type>Checkbox</type>
</CustomField>